# socket_programming

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/advanced/: socket_encryption.c  tls_client.c  tls_server.c
include/: config.h  error_handling.h  socket_utils.h
src/examples/: can_automotive.c  high_perf_webserver.c  low_latency_trading.c  secure_command_server.c  sensor_monitoring.c
src/multiplexing/: epoll_server.c  select_server.c
src/tcp_sockets/: tcp_client.c  tcp_server.c
src/udp_sockets/: udp_client.c  udp_server.c
src/unix_domain_sockets/: uds_client.c  uds_server.c
src/zerocopy/: zero_copy_client.c  zero_copy_mmap.c  zero_copy_sendfile.c
tests/: CMakeLists.txt  test_multiplexing.c  test_tcp.c  test_udp.c
